--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Puppeteer demo by @whitep4nth3r</title>
+    <title>Cross-Browser Engine</title>
     <meta
       name="description"
       content="How to use Puppeteer to take webpage screenshots and generate dynamic Open Graph images for social sharing"
@@ -47,21 +47,12 @@
 
   <body>
     <main class="main">
-      <img src="./whitep4nth3r_logo.svg" class="logo" alt="whitep4nth3r logo" />
-
       <h1 class="heading">Puppeteer Demo</h1>
       <h2 class="subheading">
         How to use Puppeteer to take webpage screenshots and generate dynamic Open Graph images for
         social sharing
       </h2>
 
-      <a
-        class="viewOnGitHub"
-        target="_blank"
-        rel="nofollow norefferer"
-        href="https://github.com/whitep4nth3r/puppeteer-demo"
-        >View the code on GitHub</a
-      >
 
       <div class="spinner" data-loader>
         <div class="double-bounce1"></div>
@@ -84,21 +75,21 @@
           name="urlInput"
           data-url-input
           aria-label="URL"
-          value="https://whitep4nth3r.com"
+          value=""
         />
         <p data-error class="error">Oh no! Something went wrong. Try again!</p>
         <button type="submit" data-button class="button">Generate screenshot</button>
       </form>
     </main>
 
-    <footer>
+    <!--footer>
       <a
         class="footerLink"
         target="_blank"
         href="https://whitep4nth3r.com?utm_source=puppeteer-demo"
         >@whitep4nth3r</a
       >
-    </footer>
+    </footer-->
     <script type="module" src="./browser.js"></script>
   </body>
 </html>
